--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,13 @@
-<% @lists.each do |list| %>
-  <%= list.name %>
-  <% end %>
+
+
+  
 
 <h1>To Do Lists</h1>
+
+<h1>My Lists</h1>
+<ul>
+  <% @lists.each() do |list| %>
+  <li><a href="/lists/<%= list.id %>"><%= list.name %></a></li>
+  <% end %>
+  <a href="/lists/new">Add a new List</a>
+</ul>
