--- a/views/success.erb
+++ b/views/success.erb
@@ -1,3 +1,4 @@
-<h1>The task has been successfully submitted!</h1>
+<h1>The list has been successfully submitted!</h1>
+<h2> Success</h2>
 
 <p><a href="/">Back</a></p>
