--- a/views/task_list.erb
+++ b/views/task_list.erb
@@ -1,5 +1,8 @@
+<h2>List of tasks</h2>
+
 <ul>
   <% @list.tasks.each() do |task| %>
-    <li><%= task.name() %></li>
+    <h3><%= task.name() %></h3>
   <% end %>
 </ul>
+<a href="/lists/<%= @list.id%>/task/new">Task form</a>
