--- a/views/task_edit.erb
+++ b/views/task_edit.erb
@@ -4,16 +4,21 @@
   <input name="_method" type="hidden" value="patch">
   <label for="description">Redescribe your task:</label>
   <input id="description" name="description" type="text">
+
   <input name="due_date" id="due_date" type="hidden" value="<%= @task.due_date() %>">
+
+  <input name="done" id="done" type="hidden" value="false">
+
   <button type="submit">Update</button>
 </form>
 
 <form action="/tasks/<%= @task.id() %>" method="post">
   <input name="_method" type="hidden" value="patch">
   <input id="description" name="description" type="hidden" value='<%= @task.description %>'>
-  <input name="due_date" id="due_date" type="hidden" value="<%= @task.due_date() %>">  
+  
+  <input name="due_date" id="due_date" type="hidden" value="<%= @task.due_date() %>">
     <div class='checkbox'>
-      <label><input type='checkbox' name='done[]' value="true">Task Complete</label>
+      <label><input type='checkbox' name='done[]' id="done" value="true">Task Complete</label>
     </div>
   <button type="submit">Update</button>
 </form>
